# bluebox

./: .gitignore  AI_PROVIDER_MODEL_SELECTION.md  CLAUDE.md  DEPLOY.md  Dockerfile  FIX_2_WEBSOCKET_EVENTS.md  MISMATCH_REPORT.md  README.md  docker-compose.yml  main.py  netlify.toml  package-lock.json  package.json  requirements.txt
be/: .env.example  pyproject.toml
be/src/bluebox/: __init__.py
be/src/bluebox/interfaces/: panel_builder.py  stage_advance.py
be/src/bluebox/interfaces/api/: app.py  auth.py  deps.py
be/src/bluebox/interfaces/ws/: connection_registry.py  steering_session.py
be/src/bluebox/modules/input_processing/: chunking.py
be/src/bluebox/shared_kernel/: ports.py
be/src/bluebox/shared_kernel/domain/: audit.py  graph_utils.py  node.py  rbac.py  risk.py
be/tests/: conftest.py  test_advisory_application.py  test_api_core_flow.py  test_api_request_logging_middleware.py  test_chat_application.py  test_chunked_prd_analyzer.py  test_codegen_application.py  test_core_pipeline_application.py  test_dependency_graph.py  test_generation_service_application.py  test_governance_application.py  test_in_memory_repositories.py  test_input_processing_chunking.py  test_llm_agents_smoke.py  test_llm_connector_logging.py  test_node_entities.py  test_node_relations.py  test_observability_log_bus.py  test_observability_redaction.py  test_pipeline_state_machine.py  test_project_context_application.py  test_rbac_algorithms.py  test_runtime_sandbox.py  test_syntax_validator.py  test_workspace_manager.py  test_ws_connection_registry.py  test_ws_steering_session.py
(+624 files in other folders)
