[project]
name = "bluebox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arun Soman", email = "aarunsoman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pydantic>=2.9",
    "pydantic-ai>=1.107.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
bluebox = "bluebox:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
